--- a/src/styles/section-content.scss
+++ b/src/styles/section-content.scss
@@ -12,15 +12,22 @@
   .section-header {
     margin-left: auto;
     margin-right: auto;
-
+    display: inline-flex;
+    // background-color: dodgerblue;
   }
   min-height: 100vh;
   &--intro {
     background: color(intro);
     display: flex;
+    max-width: 100vw;
     flex-direction: column; // make main axis vertical instead of side-by-side
     justify-content: center; // center items vertically
     align-items: center; // center items horizontally
+
+    .intro__team-icon {
+      max-height: 450px;
+    }
+
     h1 {
       font-weight: 800;
       color: color(heading)
@@ -30,9 +37,10 @@
   &--the-team {
     // background: lightgrey;
     .section-header {
-      width: 460px;
+      // width: 500px;
       position: relative;
       z-index: 0;
+      // clip-path: polygon(0 14%, 100% 13%, 95% 100%, 5% 100%);
 
       &::before {
         content: '';
@@ -40,8 +48,10 @@
         height: 100%;
         position: absolute;
         background: dodgerblue;
-        // display: block;
-        right: 10px;
+        clip-path: polygon(0 14%, 100% 0, 95% 100%, 5% 100%);
+
+
+        right: 20px;
         bottom: 10px;
         z-index: -1;
       }
@@ -49,6 +59,9 @@
       h1 {
         z-index: 1;
         background-color: lightseagreen;
+        clip-path: polygon(0 14%, 100% 0, 95% 100%, 5% 100%);
+        padding: 35px 20px 20px;
+        margin: 0;
       }
     }
   }
